[gd_scene load_steps=20 format=2]

[ext_resource path="res://code/gd/enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/enemies/enemy.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/player/bullet.png" type="Texture" id=3]
[ext_resource path="res://assets/audio/sounds/sound_hit.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/sounds/sound_explode.wav" type="AudioStream" id=5]
[ext_resource path="res://code/tscn/FCTMgr.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/audio/sounds/Knife atk.wav" type="AudioStream" id=7]

[sub_resource type="Animation" id=1]
resource_name = "Attack"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 8, 9, 10, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/KnifeHit/HitBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/KnifeHit/Sound:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_end"
} ]
}

[sub_resource type="Animation" id=2]
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.0407406, 0.147668 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.700629, 0.778338, 0.856472, 0.928877 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.965338 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Explosion:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0, 0.68 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Explosion:process_material:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"times": PoolRealArray( 0.710922, 0.826899 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 4.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SoundHit:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.00999999 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SoundExplode:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1.89 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.978562 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=3]
length = 4.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.75, 1.5, 2.25, 3, 3.75, 4.5, 5.25, 6, 6.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4, 5, 7, 6, 7, 5 ]
}

[sub_resource type="Animation" id=4]
length = 1.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5 ]
}

[sub_resource type="CanvasItemMaterial" id=5]

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 100, -20, 0, 0, 100, 20 )

[sub_resource type="CircleShape2D" id=7]
radius = 150.0

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 8.99518, 18.0647 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 8.97982, 2.82913 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 8.38264, 15.7135 )

[sub_resource type="CanvasItemMaterial" id=11]
blend_mode = 1

[sub_resource type="ParticlesMaterial" id=12]
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.23621

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 1 )

[node name="Enabler" type="VisibilityEnabler2D" parent="."]
visible = false
position = Vector2( -4.97543, 15.2475 )
scale = Vector2( 23.5056, 10.8629 )
pause_particles = false

[node name="Anim" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 1 )
anims/explode = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/walk = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.801816 )
material = SubResource( 5 )
rotation = 0.0110197
texture = ExtResource( 2 )
flip_h = true
hframes = 11

[node name="DetectionRange" type="Area2D" parent="Sprite"]
visible = false
rotation = -0.0110197
collision_layer = 0
collision_mask = 2

[node name="Range" type="CollisionShape2D" parent="Sprite/DetectionRange"]
position = Vector2( -2.58338e-09, -2.77389 )
shape = SubResource( 6 )

[node name="AlertRange" type="Area2D" parent="Sprite"]
visible = false
rotation = -0.0110197
input_pickable = false
collision_layer = 0
collision_mask = 4

[node name="Range" type="CollisionShape2D" parent="Sprite/AlertRange"]
position = Vector2( 3.88345, -2.21911 )
shape = SubResource( 7 )

[node name="AttackRange" type="Area2D" parent="Sprite"]
visible = false
rotation = -0.0110197
input_pickable = false
collision_layer = 0
collision_mask = 2

[node name="Range" type="CollisionShape2D" parent="Sprite/AttackRange"]
position = Vector2( 19.6629, -2.0783 )
shape = SubResource( 8 )

[node name="KnifeHit" type="Area2D" parent="Sprite"]
visible = false
rotation = -0.0110197
input_pickable = false
collision_layer = 0
collision_mask = 2

[node name="HitBox" type="CollisionShape2D" parent="Sprite/KnifeHit"]
position = Vector2( 19.5587, -4.88581 )
shape = SubResource( 9 )
disabled = true

[node name="Sound" type="AudioStreamPlayer" parent="Sprite/KnifeHit"]
stream = ExtResource( 7 )
volume_db = -16.735
pitch_scale = 1.02

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 2.50858, 0.207165 )
rotation = -6.28319
shape = SubResource( 10 )

[node name="DetectFloorLeft" type="RayCast2D" parent="."]
visible = false
position = Vector2( -6.96549, -3.48735 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="DetectWallLeft" type="RayCast2D" parent="."]
visible = false
position = Vector2( 11.9263, -5.38906 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 20 )

[node name="DetectWallRight" type="RayCast2D" parent="."]
visible = false
position = Vector2( -5.94266, -5.26204 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 20 )

[node name="DetectFloorRight" type="RayCast2D" parent="."]
visible = false
position = Vector2( 11.9804, -1.78428 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="Explosion" type="Particles2D" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.12 )
material = SubResource( 11 )
emitting = false
amount = 32
lifetime = 0.5
one_shot = true
speed_scale = 1.2
explosiveness = 0.1
process_material = SubResource( 12 )
texture = ExtResource( 3 )

[node name="SoundHit" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource( 4 )
volume_db = -4.0

[node name="SoundExplode" type="AudioStreamPlayer2D" parent="."]
visible = false
position = Vector2( 4.84279, -13.7535 )
stream = ExtResource( 5 )
volume_db = -5.0

[node name="FCTMgr" parent="." instance=ExtResource( 6 )]
position = Vector2( 0.220367, -15.646 )
[connection signal="body_entered" from="Sprite/DetectionRange" to="." method="_on_DetectionRange_body_entered"]
[connection signal="body_exited" from="Sprite/DetectionRange" to="." method="_on_DetectionRange_body_exited"]
[connection signal="body_entered" from="Sprite/AttackRange" to="." method="_on_AttackRange_body_entered"]
[connection signal="body_exited" from="Sprite/AttackRange" to="." method="_on_AttackRange_body_exited"]
[connection signal="body_entered" from="Sprite/KnifeHit" to="." method="_on_KnifeHit_body_entered"]
